Integrated all pages.

--- a/LoginPage/LoginPage.html
+++ b/LoginPage/LoginPage.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <button type="submit">Login</button>
-      <a href="forgotten-password.html" class="forgot-link">Forgotten Password?</a>
+      <a href="../forgot-password-system/public/forgot.html" class="forgot-link">Forgotten Password?</a>
     </form>
   </div>
   <script src="Script.js"></script>
