--- a/forgot-password-system/public/forgot.html
+++ b/forgot-password-system/public/forgot.html
@@ -32,7 +32,7 @@
       <div class="footer-note" role="note">For your security, messages are generic.</div>
 
       <div class="hr"></div>
-      <a class="link" href="../LoginPage/LoginPage.html" aria-label="Back to login">Back to Login</a>
+      <a class="link" href="../../LoginPage/LoginPage.html" aria-label="Back to login">Back to Login</a>
     </form>
   </main>
 
